tdf#137684 sw ChangesInMargin: fix crash on Undo of characters

deleted by pressing Delete.

Follow-up of commit 62596e7f52492305b49dab70bdf81daf82b930a1
(tdf#137526 sw ChangesInMargin: fix Undo of deleted words).

Change-Id: I1a3c3e446f67de94ff3b750b45421f9bc93e5cc2